--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,83 @@
+html, 
+body {
+  font-family: Arial, sans-serif;
+}
+
 .button-class {
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    margin: 20px 15px;
-    padding: 0 20px;
-    background-color: rgb(224, 224, 224);
-    border-radius: 10px;
-    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.2);
+    padding: 7px;
+    color: rgb(61, 61, 61);
+    margin-top: 10px;
+    font-size: 25px;
+    font-weight: bold;
+    border-width: 4px;
+    text-transform: capitalize;
+    background-color: rgba(214, 214, 214, 0.651);
+    cursor: pointer;
+    border-radius: 7px;
+    border-color: silver;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  
+  /* to show it above other content */
+  z-index: 999; 
+  
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto; 
+  
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background-color: rgb(214, 214, 214);
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+  text-align: left;
+  height: 500px;
+  border: 1;
+  border-radius: 10px;
+  border-width: 10px;
+}
+
+.modal-close {
+  float: right;
+  border: 1;
+  border-radius: 10px;
+  border-color: silver;
+  background-color: rgba(255, 174, 174, 0.651);
+  color: #ff0000;
+  font-weight: bolder;
+  border-width: 2px;
+}
+
+.modal h1 {
+  margin-top: 0;
+  text-transform: capitalize;
+}
+
+.modal p {
+  margin-bottom: 0;
+  font-size: 16px;
+}
+
+.modal img {
+    height: 300px;
 }
