--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,43 @@
-html, 
 body {
   font-family: Arial, sans-serif;
   text-transform: capitalize;
-  background-color: rgb(95, 183, 255);
+  background-image: url('img/poke-background.jpg');
+}
+
+html {
+  margin-top: 0px;
+}
+
+.navbar {
+  z-index: 1;
+  position: fixed;
+  padding: 0px;
+  border-radius: 10px;
+  border-color: black;
+  border-width: 10px;
+  margin: 10px;
+}
+
+.navbar-brand {
+  background-color: black;
+  margin: 0px;
+  border-radius: 10px;
+  border-color: black;
+  border-width: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.image {
+  width: 170px;
+  background-color: rgb(255, 255, 255);
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 10px;
+  border-width: 5px;
+  border-color: black;
 }
 
 .btn {
@@ -36,20 +71,28 @@ body {
   justify-content: center;
   flex-flow: row wrap;
   margin-top: 30px;
+  border-color: blue;
 }
 
 .list-group-item {
   margin: 8px;
+  background: none;
+  padding: 0px;
   border: none;
-  background-color: rgb(95, 183, 255);
 }
 
 .list-group-item button {
   width: 200px;
   height: 200px;
-  background-color: rgb(185, 219, 247);
+  background-color: white;
   box-shadow: 5px black;
   border-color: black;
+}
+
+.list-group-item button:hover {
+  background-color: rgb(255, 172, 172);
+  border-color: black;
+  color: black;
 }
 
 .modal-body {
